maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:41: error: '(' expected but identifier found.
		for i(<- 1 to nb) {
                    ^